# OpenGLPractice

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OpenGLPractice.sln  OpenGLTutorials.sln  README.md
3d/: CMakeLists.txt  cube.blend
OpenGLPractice/: OpenGLPractice.vcxproj  OpenGLPractice.vcxproj.filters  Shader.cpp  Shader.h  camera.cpp  camera.h  fragmentShader.glsl  glad.c  main.cpp  vertexShader.glsl
OpenGLTutorials/: OpenGLTutorials.vcxproj  glad.c  main.cpp
VSConfig/Libs/: glfw3.lib
assets/: CMakeLists.txt  grass.blend1  grass.mtl  texture.aseprite
assets/other_3d/: cobblestone.mtl  cube.blend  cube.blend1  dirt.mtl  floor.blend  floor.blend1  floor.mtl  grass.blend  grass.blend1  grass.mtl
glsl/: CMakeLists.txt  default.frag  default.vert  default_frag.glsl  default_vert.glsl  fragmentShader.glsl  light.frag  light_frag.glsl  light_vert.glsl  normal.frag  normal.geom  normal.vert  quad.frag  quad.vert  shadow.vert  skybox.frag  skybox.vert  vertexShader.glsl
glsl/include/: light_structs.h  light_uniform_buffer.h  shader_lights.h  shader_macros.h
img/: CMakeLists.txt  texture.aseprite  texture.json
include/: CMakeLists.txt  Shader.h  camera.h  component.h  constants.h  game_time.h  glfw.h  light_block.h  mesh.h  model.h  pch.h  screen_manager.h  shader.h  shadow.h  stb_image.h  system_utils.h  utils.h  world.h
src/: CMakeLists.txt  Shader.cpp  camera.cpp  component.cpp  game_time.cpp  light_block.cpp  main.cpp  mesh.cpp  model.cpp  screen_manager.cpp  shader.cpp  shadow.cpp  system_utils.cpp  utils.cpp  world.cpp
